--- a/StackOverflowProject/views/admin/tagList.hbs
+++ b/StackOverflowProject/views/admin/tagList.hbs
@@ -83,7 +83,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="inputGroup-sizing-sm">New name</span>
                             </div>
-                            <input name="tagName" type="text" class="form-control" aria-describedby="inputGroup-sizing-sm">
+                            <input name="tagName" type="text" class="form-control" aria-describedby="inputGroup-sizing-sm" required>
                         </div>
                     </div>
                     <div class="modal-footer">
@@ -105,7 +105,7 @@
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="form-group" hidden="hidden">
-                        <input type="text" name="tagId" id="tag" value="" />
+                        <input type="text" name="tagId" id="tag" value=""/>
                     </div>
                     <div class="modal-body">
                         <p>Are you sure you want to delete these Tag?</p>
