--- a/StackOverflowProject/views/authentication/register.hbs
+++ b/StackOverflowProject/views/authentication/register.hbs
@@ -22,20 +22,20 @@
                         <div class="form-group">
                             <label for="username" class="col-md-3 control-label">User Name</label>
                             <div class="col-md-9">
-                                <input type="text" class="form-control" name="username" placeholder="User Name">
+                                <input type="text" class="form-control" name="username" placeholder="User Name" required>
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="password" class="col-md-3 control-label">Password</label>
                             <div class="col-md-9">
-                                <input type="password" class="form-control" name="password" placeholder="Password">
+                                <input type="password" class="form-control" name="password" placeholder="Password" required>
                             </div>
                         </div>
 
                         <div class="form-group">
                             <label for="confirmpassword" class="col-md-3 control-label">Confirm password</label>
                             <div class="col-md-9">
-                                <input type="password" class="form-control" name="confirmpassword" placeholder="Confirm password">
+                                <input type="password" class="form-control" name="confirmpassword" placeholder="Confirm password" required>
                             </div>
                         </div>
                         <div class="form-group">
