--- a/StackOverflowProject/views/profile/createQuestion.hbs
+++ b/StackOverflowProject/views/profile/createQuestion.hbs
@@ -26,11 +26,11 @@
                                     <form id="createform" class="form-horizontal" method="post" action="/profile/createQuestion">
                                         <div class="form-group">
                                             <label for="title" class="control-label">Title</label>
-                                            <input name="title" class="form-control" />
+                                            <input name="title" class="form-control" required/>
                                         </div>
                                         <div class="form-group">
                                             <label for="description" class="control-label">Text</label>
-                                            <textarea id="message" name="description" class="form-control" rows="10" value=""></textarea>
+                                            <textarea id="message" name="description" class="form-control" rows="10" value="" required></textarea>
                                         </div>
                                         <div class="form-group">
                                             <div class="col-md-10">
