--- a/StackOverflowProject/views/profile/index.hbs
+++ b/StackOverflowProject/views/profile/index.hbs
@@ -47,7 +47,7 @@
                             <td>{{formatDate this.dateofupdate 'MMMM Do YYYY, h:mm:ss a'}}</td>
                             <td>{{this.rating}}</td>
                             <td>
-                                <a data-target="#editQuestionModal" data-id={{this._id}} data-title={{this.title}} data-text={{this.description}} class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                                <a data-target="#editQuestionModal" data-id={{this._id}} data-title="{{this.title}}" data-text="{{this.description}}" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
                                 <a data-target="#deleteQuestionModal" data-id={{this._id}} class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
                             </td>
                         </tr>
