--- a/StackOverflowProject/views/admin/tagList.hbs
+++ b/StackOverflowProject/views/admin/tagList.hbs
@@ -34,8 +34,8 @@
         <div class="col-md-10 col-sm-10">
             {{#each tags}}
             <a class="btn btn-info btn-sm">{{this.tagname}}</a>
-            <a data-target="#editTagModal" data-id={{this._id}} class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-            <a data-target="#deleteTagModal" data-id={{this._id}} class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+            <a data-target="#editTagModal" data-id={{this._id}} data-old="{{this.tagname}}" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+            <a data-target="#deleteTagModal" data-id={{this._id}} data-old="{{this.tagname}}" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
             {{/each}}
         </div>
     </div>
@@ -78,6 +78,9 @@
                     <div class="form-group" hidden="hidden">
                         <input type="text" name="tagId" id="tag" value="" />
                     </div>
+                    <div class="form-group" hidden="hidden">
+                        <input type="text" name="oldTag" id="oldtag" value="" />
+                    </div>
                     <div class="modal-body">
                         <div class="input-group input-group-sm mb-3">
                             <div class="input-group-prepend">
@@ -105,7 +108,10 @@
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="form-group" hidden="hidden">
-                        <input type="text" name="tagId" id="tag" value=""/>
+                        <input type="text" name="tagId" id="tag" value="" />
+                    </div>
+                    <div class="form-group" hidden="hidden">
+                        <input type="text" name="oldTag" id="oldtag" value="" />
                     </div>
                     <div class="modal-body">
                         <p>Are you sure you want to delete these Tag?</p>
