--- a/StackOverflowProject/views/partials/layout.hbs
+++ b/StackOverflowProject/views/partials/layout.hbs
@@ -4,36 +4,55 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="/stylesheets/main.css" />
     <link rel="stylesheet" href="../../public/bootstrap-3.3.7-dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/stylesheets/main.css" />
 </head>
 
 <body>
+    <!--<nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">WebSiteName</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">Page 1</a></li>
+                <li><a href="#">Page 2</a></li>
+            </ul>
+            <form class="navbar-form navbar-left" action="/action_page.php">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Search">
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form>
+        </div>
+    </nav>-->
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
                 <a class="navbar-brand" href="/">stack <b>overflow</b></a>
             </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
+            <div class="collapse navbar-collapse" id="mynavbar">
                 <ul class="nav navbar-nav navbar-right">
-                    
                     {{#if user}}
-                        {{#if (eq user.role "admin")}}
-                            <li><a href="/admin/tags"><span class="glyphicon glyphicon-home"></span> Manage Tags</a></li>
-                        {{/if}}
-                        <li><a href="/questions/all"><span class="glyphicon glyphicon-education"></span> All questions</a></li>
+                    {{#if (eq user.role "admin")}}
+                        <li><a href="/admin/tags"><span class="glyphicon glyphicon-home"></span> manage tags</a></li>
+                    {{/if}}
+                        <li><a href="/questions/top"><span class="glyphicon glyphicon-star"></span> top table</a></li>
+                        <li><a href="/questions/all"><span class="glyphicon glyphicon-education"></span> all questions</a></li>
                         <li><a href="/profile"><span class="glyphicon glyphicon-home"></span> {{user.username}}</a></li>
-                        <li><a href="/auth/logout"><span class="glyphicon glyphicon-off"></span> Logout</a></li>
+                        <li><a href="/auth/logout"><span class="glyphicon glyphicon-off"></span> logout</a></li>
                     {{else}}
-                        <li><a href="/auth/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                        <li><a href="/auth/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                        <li><a href="/auth/register"><span class="glyphicon glyphicon-user"></span> sign up</a></li>
+                        <li><a href="/auth/login"><span class="glyphicon glyphicon-log-in"></span> login</a></li>
                     {{/if}}
                 </ul>
+                <form class="navbar-form navbar-left" method="get" action="/questions/search">
+                <div class="form-group">
+                    <input type="text" name="text" class="form-control" placeholder="Search">
+                </div>
+                <button type="submit" class="btn btn-success">Search</button>
+            </form>
             </div>
         </div>
     </nav>
