--- a/StackOverflowProject/views/questions/question.hbs
+++ b/StackOverflowProject/views/questions/question.hbs
@@ -46,7 +46,7 @@
                                 <b>{{question.rating}}</b>
                             </form>
                             <hr />
-                            <h5><pre class="pre">{{question.description}}</pre></h5>
+                            <h5><pre style="color:black;">{{question.description}}</pre></h5>
 
                             <div class="col-sm-6">
                                 <b id="userName"><span class="glyphicon glyphicon-user"></span>{{question.authorname}} </b>
@@ -107,7 +107,7 @@
                     {{#if tags}}
                         <div class="panel panel-default">
                             <div class="panel-body">
-                                <div class="panel-heading" style="background-color:deepskyblue">
+                                <div class="panel-heading">
                                     <h3 class="panel-title">Tags</h3>
                                 </div>
                                 <hr />
