--- a/StackOverflowProject/views/questions/list.hbs
+++ b/StackOverflowProject/views/questions/list.hbs
@@ -17,7 +17,7 @@
     <div class="blog">
         <div class="container">
             <div class="row">
-                <div class="[ col-xs-12 col-sm-offset-0 col-sm-10 ]">
+                <div class="col-sm-10">
                     <div class="container">
                         <div class="table-wrapper">
                             <div class="table-title">
@@ -27,15 +27,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <table class="table table-striped table-hover">
+                            <table class="table table-striped table-hover" id="myTable">
                                 <thead>
                                     <tr>
-                                        <th>
-                                            Date
-                                        </th>
-                                        <th>Title</th>
-                                        <th>Last Update</th>
-                                        <th>Rating</th>
+                                        <th onclick="sortTable(0)">Date</th>
+                                        <th onclick="sortTable(1)">Title</th>
+                                        <th onclick="sortTable(2)">Last Update</th>
+                                        <th onclick="sortTable(3)">Rating</th>
                                         <th>Actions</th>
                                     </tr>
                                 </thead>
@@ -43,7 +41,7 @@
                                     {{#each questions}}
                                     <tr>
                                         <td>{{formatDate this.dateofcreation 'MMMM Do YYYY, h:mm:ss a'}}</td>
-                                        <td><a href="/questions/{{this._id}}">{{this.title}}</a></td>
+                                        <td>{{this.title}}</td>
                                         <td>{{formatDate this.dateofupdate 'MMMM Do YYYY, h:mm:ss a'}}</td>
                                         <td>{{this.rating}}</td>
                                         <td>
@@ -61,44 +59,43 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-2">
-            <form role="form" action="/questions/all" method="get">
+        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+            <div class="btn-group mr-2" role="group" aria-label="First group">
+                <form role="form" action="/questions/all" method="get">
 
-                <div class="form-group" hidden="hidden">
-                    <input type="text" name="rowsPerPage" id="answer" value="3" />
-                </div>
-
-                <div style="margin-top:10px" class="form-group">
-                    <div class="col-sm-12 controls">
-                        <p><button id="btn-login" type="submit" class="btn btn-warning">3</button></p>
+                    <div class="form-group" hidden="hidden">
+                        <input type="text" name="rowsPerPage" id="answer" value="3" />
                     </div>
-                </div>
-            </form>
-            <form role="form" action="/questions/all" method="get">
-                <div class="form-group" hidden="hidden">
-                    <input type="text" name="rowsPerPage" id="answer" value="5" />
-                </div>
-                <div style="margin-top:10px" class="form-group">
-                    <div class="col-sm-12 controls">
-                        <p><button id="btn-login" type="submit" class="btn btn-warning">5</button></p>
-                    </div>
-                </div>
-            </form>
-            <form role="form" action="/questions/all" method="get">
 
-                <div class="form-group" hidden="hidden">
-                    <input type="text" name="rowsPerPage" id="answer" value="10" />
-                </div>
-
-                <div style="margin-top:10px" class="form-group">
-                    <div class="col-sm-12 controls">
-                        <p><button id="btn-login" type="submit" class="btn btn-warning">10</button></p>
+                    <div class="form-group">
+                        <div class="col">
+                            <p><button id="btn-login" type="submit" class="btn btn-warning">3</button></p>
+                        </div>
                     </div>
-                </div>
-            </form>
-        </div>
-        <button id="btn-login" type="submit" class="btn btn-warning"><a href="#">50</a></button>
-        <div class="btn-toolbar">
+                </form>
+                <form role="form" action="/questions/all" method="get">
+                    <div class="form-group" hidden="hidden">
+                        <input type="text" name="rowsPerPage" id="answer" value="5" />
+                    </div>
+                    <div class="form-group">
+                        <div class="col">
+                            <p><button id="btn-login" type="submit" class="btn btn-warning">5</button></p>
+                        </div>
+                    </div>
+                </form>
+                <form role="form" action="/questions/all" method="get">
+
+                    <div class="form-group" hidden="hidden">
+                        <input type="text" name="rowsPerPage" id="answer" value="10" />
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col">
+                            <p><button id="btn-login" type="submit" class="btn btn-warning">10</button></p>
+                        </div>
+                    </div>
+                </form>
+            </div>
             <div class="btn-group">
                 {{{page}}}
             </div>
