--- a/StackOverflowProject/views/questions/list.hbs
+++ b/StackOverflowProject/views/questions/list.hbs
@@ -23,17 +23,23 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-sm-6">
-                                        <h2><b>Questions</b></h2>
+                                        <h2>
+                                            <b>Questions</b>
+                                            <button type="submit" class="btn btn-secondary" name="rowsPerPage" value="10" form="form">10</button>
+                                            <button type="submit" class="btn btn-secondary" name="rowsPerPage" value="5" form="form">5</button>
+                                            <button type="submit" class="btn btn-secondary" name="rowsPerPage" value="3" form="form">3</button>
+                                        </h2>
                                     </div>
                                 </div>
                             </div>
                             <table class="table table-striped table-hover" id="myTable">
                                 <thead>
                                     <tr>
-                                        <th onclick="sortTable(0)">Date</th>
-                                        <th onclick="sortTable(1)">Title</th>
-                                        <th onclick="sortTable(2)">Last Update</th>
-                                        <th onclick="sortTable(3)">Rating</th>
+                                        <th><a href="/questions/date">Date</a></th>
+                                        <th><a href="/questions/title">Title</a></th>
+                                        <th><a href="/questions/update">Last Update</a></th>
+                                        <th><a href="/questions/rating">Rating</a></th>
+                                        <th>Ref</th>
                                         <th>Actions</th>
                                     </tr>
                                 </thead>
@@ -44,6 +50,7 @@
                                         <td>{{this.title}}</td>
                                         <td>{{formatDate this.dateofupdate 'MMMM Do YYYY, h:mm:ss a'}}</td>
                                         <td>{{this.rating}}</td>
+                                        <td><a href="/questions/{{this._id}}"><span class="glyphicon glyphicon-search"></span></a></td>
                                         <td>
                                             {{#if (eq2 ../user.role "admin" this.author ../user._id)}}
                                             <a data-target="#editQuestionModal" data-id={{this._id}} data-title="{{this.title}}" data-text="{{this.description}}" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
@@ -55,52 +62,22 @@
                                 </tbody>
                             </table>
                         </div>
+                        {{{page}}}
                     </div>
                 </div>
             </div>
         </div>
-        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-            <div class="btn-group mr-2" role="group" aria-label="First group">
-                <form role="form" action="/questions/all" method="get">
-
-                    <div class="form-group" hidden="hidden">
-                        <input type="text" name="rowsPerPage" id="answer" value="3" />
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col">
-                            <p><button id="btn-login" type="submit" class="btn btn-warning">3</button></p>
-                        </div>
-                    </div>
-                </form>
-                <form role="form" action="/questions/all" method="get">
-                    <div class="form-group" hidden="hidden">
-                        <input type="text" name="rowsPerPage" id="answer" value="5" />
-                    </div>
-                    <div class="form-group">
-                        <div class="col">
-                            <p><button id="btn-login" type="submit" class="btn btn-warning">5</button></p>
-                        </div>
-                    </div>
-                </form>
-                <form role="form" action="/questions/all" method="get">
-
-                    <div class="form-group" hidden="hidden">
-                        <input type="text" name="rowsPerPage" id="answer" value="10" />
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col">
-                            <p><button id="btn-login" type="submit" class="btn btn-warning">10</button></p>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <div class="btn-group">
-                {{{page}}}
-            </div>
-        </div>
     </div>
+    <!--<script>
+        $(".paginator-page, .paginator-previous, .paginator-next, .paginator-current").each(function () {
+            alert(this.attr('href'));
+        });
+        //    replaceWith(function (index, oldHTML) {
+        //    alert(oldHTML.attr('href'));
+        //    return $('<a href="' + '#' + '" class="btn btn-primary" >').html(oldHTML);
+        //});
+    </script>-->
+    <form role="form" action="/questions/all" method="get" id="form"></form>
     <!-- Edit Modal HTML -->
     <div id="editQuestionModal" class="modal fade">
         <div class="modal-dialog">
