takes google user from ggl api

--- a/StackOverflowProject/views/authentication/register.hbs
+++ b/StackOverflowProject/views/authentication/register.hbs
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="../../public/bootstrap-3.3.7-dist/css/bootstrap.min.css" />
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../../public/stylesheets/socials.css" />
     <meta charset="utf-8" />
     <title>Register</title>
 </head>
@@ -50,9 +52,12 @@
                             </div>
                         </div>
                     </form>
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#" class="fa fa-google"></a>
+                    <hr />
                 </div>
             </div>
-            </div>
         </div>
+    </div>
 </body>
 </html>
