--- a/StackOverflowProject/views/authentication/login.hbs
+++ b/StackOverflowProject/views/authentication/login.hbs
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <link rel="stylesheet" href="../../public/bootstrap-3.3.7-dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../../public/stylesheets/socials.css" />
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <meta charset="utf-8" />
@@ -19,7 +20,7 @@
                 <div style="padding-top:30px" class="panel-body">
                     <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
 
-                    <form id="loginform" class="form-horizontal" role="form" action="/auth/login" method = "post">
+                    <form id="loginform" class="form-horizontal" role="form" action="/auth/login" method="post">
 
                         <div style="margin-bottom: 25px" class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
@@ -43,6 +44,8 @@
                                 <p><button id="btn-login" type="submit" class="btn btn-success"> Sign Up</button></p>
                             </div>
                         </div>
+                        <a href="/auth/google" class="fa fa-facebook"></a>
+                        <a href="/auth/google" class="fa fa-google"></a>
 
                         <div class="form-group">
                             <div class="col-md-12 control">
@@ -55,7 +58,6 @@
                             </div>
                         </div>
                     </form>
-
                 </div>
             </div>
         </div>
