added google integration, facebook api

--- a/StackOverflowProject/views/authentication/login.hbs
+++ b/StackOverflowProject/views/authentication/login.hbs
@@ -44,7 +44,7 @@
                                 <p><button id="btn-login" type="submit" class="btn btn-success"> Sign Up</button></p>
                             </div>
                         </div>
-                        <a href="/auth/google" class="fa fa-facebook"></a>
+                        <a href="/auth/facebook" class="fa fa-facebook"></a>
                         <a href="/auth/google" class="fa fa-google"></a>
 
                         <div class="form-group">
