--- a/StackOverflowProject/views/authentication/googlePassword.hbs
+++ b/StackOverflowProject/views/authentication/googlePassword.hbs
@@ -1,5 +1,4 @@
 ﻿<!DOCTYPE html>
-
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <link rel="stylesheet" href="../../public/bootstrap-3.3.7-dist/css/bootstrap.min.css" />
@@ -8,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../../public/stylesheets/socials.css" />
     <meta charset="utf-8" />
-    <title>Register</title>
+    <title>Password</title>
 </head>
 <body>
     {{> layout}}
@@ -16,32 +15,30 @@
         <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
             <div class="panel panel-info">
                 <div class="panel-heading">
-                    <div class="panel-title">Sign Up</div>
+                    <div class="panel-title">Your password</div>
                     <div style="float:right; font-size: 85%; position: relative; top:-10px"><a id="signinlink" href="/auth/login">Sign In</a></div>
                 </div>
                 <div class="panel-body">
                     <form id="signupform" class="form-horizontal" role="form" action="/auth/register" method="post">
-                        <div class="form-group">
-                            <label for="username" class="col-md-3 control-label">User Name</label>
+                        <div class="form-group" hidden="hidden">
                             <div class="col-md-9">
-                                <input type="text" class="form-control" name="username" placeholder="User Name" required>
+                                <input type="text" class="form-control" name="username" value="{{username}}">
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label for="username" class="col-md-3 control-label">Email</label>
+                        <div class="form-group" hidden="hidden">
                             <div class="col-md-9">
-                                <input type="email" class="form-control" name="email" placeholder="example@gmail.com" required>
+                                <input type="email" class="form-control" name="email" value="{{email}}">
+                            </div>
+                        </div>
+                        <div class="form-group" hidden="hidden">
+                            <div class="col-md-9">
+                                <input class="form-control" name="access" placeholder="Password" value=true>
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="password" class="col-md-3 control-label">Password</label>
                             <div class="col-md-9">
                                 <input type="password" class="form-control" name="password" placeholder="Password" required>
-                            </div>
-                        </div>
-                        <div class="form-group" hidden>
-                            <div class="col-md-9">
-                                <input class="form-control" name="access" placeholder="Password" value=false>
                             </div>
                         </div>
                         <div class="form-group">
@@ -56,8 +53,6 @@
                             </div>
                         </div>
                     </form>
-                        <a href="/auth/facebook" class="fa fa-facebook"></a>
-                        <a href="/auth/google" class="fa fa-google"></a>
                     <hr />
                 </div>
             </div>
