added facebook and twitter oauth

--- a/StackOverflowProject/views/authentication/login.hbs
+++ b/StackOverflowProject/views/authentication/login.hbs
@@ -46,6 +46,7 @@
                         </div>
                         <a href="/auth/facebook" class="fa fa-facebook"></a>
                         <a href="/auth/google" class="fa fa-google"></a>
+                        <a href="/auth/twitter" class="fa fa-twitter"></a>
 
                         <div class="form-group">
                             <div class="col-md-12 control">
