--- a/StackOverflowProject/views/authentication/register.hbs
+++ b/StackOverflowProject/views/authentication/register.hbs
@@ -58,6 +58,7 @@
                     </form>
                         <a href="/auth/facebook" class="fa fa-facebook"></a>
                         <a href="/auth/google" class="fa fa-google"></a>
+                        <a href="/auth/twitter" class="fa fa-twitter"></a>
                     <hr />
                 </div>
             </div>
