added 2fa + sms sending

--- a/StackOverflowProject/views/authentication/oauthPassword.hbs
+++ b/StackOverflowProject/views/authentication/oauthPassword.hbs
@@ -32,7 +32,7 @@
                         </div>
                         <div class="form-group" hidden="hidden">
                             <div class="col-md-9">
-                                <input class="form-control" name="access" placeholder="Password" value=true>
+                                <input class="form-control" name="access" value=true>
                             </div>
                         </div>
                         <div class="form-group">
@@ -45,6 +45,12 @@
                             <label for="confirmpassword" class="col-md-3 control-label">Confirm password</label>
                             <div class="col-md-9">
                                 <input type="password" class="form-control" name="confirmpassword" placeholder="Confirm password" required>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="password" class="col-md-3 control-label">Phone</label>
+                            <div class="col-md-9">
+                                <input class="form-control" name="phoneNumber" placeholder="Phone Number" required>
                             </div>
                         </div>
                         <div class="form-group">
