--- a/StackOverflowProject/views/authentication/register.hbs
+++ b/StackOverflowProject/views/authentication/register.hbs
@@ -34,6 +34,12 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label for="password" class="col-md-3 control-label">Phone</label>
+                            <div class="col-md-9">
+                                <input class="form-control" name="phoneNumber" placeholder="Phone Number" required>
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label for="password" class="col-md-3 control-label">Password</label>
                             <div class="col-md-9">
                                 <input type="password" class="form-control" name="password" placeholder="Password" required>
